# gimli

./: .gitignore  README.md  build.py  pyproject.toml  setup.py
gimli/: __init__.py
src/: ref.c
tests/: test_gimli.py
